--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ color:white;
 	margin-left: -4px;
 }
 .first {
-	height: 100%;
+	max-height: 500px;
 	width:100%;
 	background-image: url(logo.bmp);
 	background-size: cover;
@@ -288,6 +288,10 @@ ul li a:hover::before{
 	margin-left: 36px;
 	margin-top: -8px;
 	
+
+}
+.first-line1{
+	position: absolute;
 
 }
 }
@@ -644,7 +648,7 @@ ul li a:hover::before{
 	margin-left: 46px;
 }
 .first {
-	height: 100%;
+	max-height: 500px;
 	width:100%;
 	background-image: url(logo.bmp);
 	background-size: cover;
@@ -680,6 +684,10 @@ ul li a:hover::before{
 	margin-left: 190px;
 	margin-top: -5px;
 	
+
+}
+.first-line1{
+	position: absolute;
 
 }
 }
@@ -918,7 +926,7 @@ color:white;
 	margin-left: -4px;
 }
 .first {
-	height: 100%;
+	height: 1000px;
 	width:100%;
 	background-image: url(logo.bmp);
 	background-size: cover;
@@ -954,6 +962,9 @@ ul li a:hover::before{
 	margin-left: 36px;
 	margin-top: -8px;
 	
+}
+.first-line1{
+	position: absolute;
 
 }
 }
@@ -970,6 +981,22 @@ ul li a:hover::before{
 				<p style="opacity: 0;" class="title">гайд по aut</p>
 				<div class="text-conteiner">
 					<p style="opacity: 0;" class="first-line">гайд по aut</p>
+					<p style="opacity: 0;" class="first-line">гайд по aut</p>
+					<p style="opacity: 0;" class="first-line">гайд по aut</p>
+					<p style="opacity: 0;" class="first-line">гайд по aut</p>
+					<p style="opacity: 0;" class="first-line">гайд по aut</p>
+					<p style="opacity: 0;" class="first-line1">гайд по aut</p>
+					<p style="opacity: 0;" class="first-line1">гайд по aut</p>
+					<p style="opacity: 0;" class="first-line1">гайд по aut</p>
+					<p style="opacity: 0;" class="first-line1">гайд по aut</p>
+					<p style="opacity: 0;" class="first-line1">гайд по aut</p>
+					<p style="opacity: 0;" class="first-line1">гайд по aut</p>
+					<p style="opacity: 0;" class="first-line1">гайд по aut</p>
+					<p style="opacity: 0;" class="first-line1">гайд по aut</p>
+					<p style="opacity: 0;" class="first-line1">гайд по aut</p>
+					<p style="opacity: 0;" class="first-line1">гайд по aut</p>
+					<p style="opacity: 0;" class="first-line1">гайд по aut</p>
+					<p style="opacity: 0;" class="first-line1">гайд по aut</p>
 					
 					<div class="container2" >
 	</div>
