--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ color:white;
 }
 .amogus2{
 				background-color: #efdecd;
-				height: 660px;
+				height: 100%;
 				justify-content: center;
 				text-align: center;
 				width: 280px;
@@ -612,7 +612,7 @@ ul li a:hover::before{
 }
 .amogus2{
 				background-color: #efdecd;
-				height: 650px;
+				height: 100%;
 				justify-content: center;
 				text-align: center;
 				width: 720px;
@@ -891,7 +891,7 @@ color:white;
 }
 .amogus2{
 				background-color: #efdecd;
-				height: 660px;
+				height: 100%;
 				justify-content: center;
 				text-align: center;
 				width: 280px;
@@ -978,28 +978,7 @@ ul li a:hover::before{
  <!--<!-->
  <div>
   <div class="container first" style="">
-				<p style="opacity: 0;" class="title">гайд по aut</p>
-				<div class="text-conteiner">
-					<p style="opacity: 0;" class="first-line">гайд по aut</p>
-					<p style="opacity: 0;" class="first-line">гайд по aut</p>
-					<p style="opacity: 0;" class="first-line">гайд по aut</p>
-					<p style="opacity: 0;" class="first-line">гайд по aut</p>
-					<p style="opacity: 0;" class="first-line">гайд по aut</p>
-					<p style="opacity: 0;" class="first-line1">гайд по aut</p>
-					<p style="opacity: 0;" class="first-line1">гайд по aut</p>
-					<p style="opacity: 0;" class="first-line1">гайд по aut</p>
-					<p style="opacity: 0;" class="first-line1">гайд по aut</p>
-					<p style="opacity: 0;" class="first-line1">гайд по aut</p>
-					<p style="opacity: 0;" class="first-line1">гайд по aut</p>
-					<p style="opacity: 0;" class="first-line1">гайд по aut</p>
-					<p style="opacity: 0;" class="first-line1">гайд по aut</p>
-					<p style="opacity: 0;" class="first-line1">гайд по aut</p>
-					<p style="opacity: 0;" class="first-line1">гайд по aut</p>
-					<p style="opacity: 0;" class="first-line1">гайд по aut</p>
-					<p style="opacity: 0;" class="first-line1">гайд по aut</p>
-					
-					<div class="container2" >
-	</div>
+				
 				</div>
 			</div>
 			
