--- a/index.html
+++ b/index.html
@@ -231,13 +231,14 @@ color:white;
 }
 .fotodiv1{
 	background-color: white;
-	width: 94%;
+	width: 88%;
 	position:relative;
-	padding: 10px;
 	border-radius: 20px;
 	text-align: center;
 	border:2px solid black;
-	margin-top: 200px;
+	
+	margin-left: 4%;
+	margin-top: 90%;
 }
 
 .fotodiv{
@@ -633,6 +634,7 @@ ul li a:hover::before{
 	border:2px solid black;
 	margin-top: 200px;
 	margin-left: 46px;
+	margin-top: 289px;
 
 }
 
@@ -989,11 +991,11 @@ ul li a:hover::before{
 						<p class="gallery-p"></p>
 					</div>
     <div class="amogus2 ">
-    	<h1>Победитель<br> по конкурсу а фнаф 9 или на любую игру</h1><br><div class="fotodiv"><p class="text2">Руслан Нургамутдинов </p><div class="circle"></div><img class="gav" src="logox.png"></div><br><br><br><br><br><div class="fotodiv1"><p class="text2">Выбрал игру:Super Bunny Man</p><img class="foto31" src="super.png"></div>
+    	<h1>Победитель<br> по конкурсу а фнаф 9 или на любую игру</h1><br><div class="fotodiv"><p class="text2">Руслан Нургамутдинов </p><img class="gav" src="logox.png"></div><br><div class="fotodiv1"><p class="text2">Выбрал игру:Super Bunny Man</p><img class="foto31" src="super.png"></div>
     </div>
 	
 		<div class="amogus">
-			<p class="pclass">Конкурс на фнаф 9 или на любую игру за 80 кодди коинов</p><div style="border-radius: 20px;" id="vk_post_-208709693_41"></div>
+			<p class="pclass">Конкурс на фнаф 9 или на любую игру за 80 кодди коинов</p><div  style="border-radius: 20px;" id="vk_post_-208709693_41"></div>
 <script type="text/javascript" src="https://vk.com/js/api/openapi.js?169"></script>
 <script type="text/javascript">
   (function() {
