--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@ color:white;
 .fotodiv1{
 	background-color: white;
 	width: 88%;
+	height: 160px;
 	position:relative;
 	border-radius: 20px;
 	text-align: center;
@@ -992,7 +993,7 @@ ul li a:hover::before{
 					</div>
     <div class="amogus2 ">
     	<h1>Победитель<br> по конкурсу а фнаф 9 или на любую игру</h1><br><div class="fotodiv"><p class="text2">Руслан Нургамутдинов </p><img class="gav" src="logox.png"></div><br><div class="fotodiv1"><p class="text2">Выбрал игру:Super Bunny Man</p><img class="foto31" src="super.png"></div>
-    <br><br><br></div>
+    </div>
 	
 		<div class="amogus">
 			<p class="pclass">Конкурс на фнаф 9 или на любую игру за 80 кодди коинов</p><div  style="border-radius: 20px;" id="vk_post_-208709693_41"></div>
