--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ color:white;
 				height: 100%;
 				justify-content: center;
 				text-align: center;
-				width: 280px;
+				width: 77%;
 				position: relative;
 				left: 0;
 				margin-left: 20px;
@@ -232,7 +232,7 @@ color:white;
 .fotodiv1{
 	background-color: white;
 	width: 88%;
-	height: 160px;
+	height: 100%;
 	position:relative;
 	border-radius: 20px;
 	text-align: center;
