--- a/index.html
+++ b/index.html
@@ -987,7 +987,7 @@ ul li a:hover::before{
 			
 			
     <div class="amogus2 ">
-    	<h1>Победитель<br> по конкурсу а фнаф 9 или на любую игру</h1><br><div class="fotodiv"><p class="text2">Руслан Нургамутдинов </p><img class="gav" src="logox.png"></div><br><div class="fotodiv1"><p class="text2">Выбрал игру:Super Bunny Man</p><img class="foto31" src="super.png"></div>
+    	<h1>Победитель<br> по конкурсу а фнаф 9 или на любую игру</h1><br><div class="fotodiv"><p class="text2">Руслан Нургамутдинов </p><img class="gav" src="logox.png"></div><br><div class="fotodiv1"><p class="text2">Выбрал игру:Super Bunny Man</p><img  style="padding-bottom: 20px;" class="foto31" src="super.png"></div>
     </div>
 	
 		<div class="amogus">
