--- a/index.html
+++ b/index.html
@@ -237,9 +237,11 @@ color:white;
 	border-radius: 20px;
 	text-align: center;
 	border:2px solid black;
-	
+	padding-bottom: 20px;
 	margin-left: 4%;
 	margin-top: 80%;
+padding-bottom: 20px;
+
 }
 
 .fotodiv{
@@ -247,7 +249,6 @@ color:white;
 	width: 77%;
 	position:absolute;
 	border:3px solid black;
-	padding: 20px;
 	border-radius: 20px;
 	justify-content: center;
 	text-align: center;
@@ -439,6 +440,7 @@ ul li a:hover::before{
 	border:2px solid black;
 	margin-top: 200px;
 	margin-left: 46px;
+	padding-bottom: 50px;
 
 }
 
@@ -636,7 +638,7 @@ ul li a:hover::before{
 	margin-top: 200px;
 	margin-left: 46px;
 	margin-top: 289px;
-
+padding-bottom: 20px;
 }
 
 .fotodiv{
@@ -915,6 +917,7 @@ color:white;
 	text-align: center;
 	border:2px solid black;
 	margin-top: 200px;
+	padding-bottom: 50px;
 }
 
 .fotodiv{
