--- a/konkyrs.html
+++ b/konkyrs.html
@@ -989,12 +989,10 @@ ul li a:hover::before{
 			</div>
 			
 			
-    <div class="amogus2">
-    	<h1>Победитель<br> по конкурсу а фнаф 9 или на любую игру</h1><br><div class="fotodiv"><p class="text2">Руслан Нургамутдинов </p><img class="gav" src="logox.png"></div><br><div class="fotodiv1"><p class="text2">Выбрал игру:Super Bunny Man</p><img  style="padding-bottom: 20px;" class="foto31" src="super.png"></div>
-    </div>
+    
 	
 		<div class="amogus">
-			<p class="pclass">Конкурс на фнаф 9 или на любую игру за 80 кодди коинов</p><div  style="border-radius: 20px;" id="vk_post_-208709693_41"></div>
+			<p class="pclass">Конкурс на фнаф 9 или на любую игру за 80 кодди коинов<br>(Прошел)</p><div  style="border-radius: 20px;" id="vk_post_-208709693_41"></div>
 <script type="text/javascript" src="https://vk.com/js/api/openapi.js?169"></script>
 <script type="text/javascript">
   (function() {
